--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "1.3.0",
     "mongoose": "3.8.8",
     "moment": "2.5.1",
-    "email-validator": "1.0.0"
+    "email-validator": "1.0.0",
+    "winston": "0.7.2"
   }
 }
